--- a/fe/src/app/features/landing-page/components/landing-page-desktop-body/landing-page-desktop-body.component.html
+++ b/fe/src/app/features/landing-page/components/landing-page-desktop-body/landing-page-desktop-body.component.html
@@ -18,8 +18,8 @@
             </div>
         </div>
 
-        <div id="banner__right-side" class="banner__right-side">
-            <div id="banner__right-side__frame-container" class="banner__right-side__frame-container">
+        <div class="banner__right-side">
+            <div class="banner__right-side__frame-container">
                 <app-landing-page-frame [imgUrl]="'huhuhu'" [aspectRatio]="'ar-11'"></app-landing-page-frame>
                 <app-landing-page-frame [imgUrl]="'huhuhu'" [aspectRatio]="'ar-34'"></app-landing-page-frame>
                 <app-landing-page-frame [imgUrl]="'huhuhu'" [aspectRatio]="'ar-169'"></app-landing-page-frame>
@@ -36,9 +36,6 @@
                 <app-landing-page-frame [imgUrl]="'huhuhu'" [aspectRatio]="'ar-34'"></app-landing-page-frame>
                 <app-landing-page-frame [imgUrl]="'huhuhu'" [aspectRatio]="'ar-169'"></app-landing-page-frame>
             </div>
-
-            <app-theme-bar (notifyToggleTheme)="handleToggleTheme()"
-                (notifyToggleResume)="handleToggleResume()"></app-theme-bar>
         </div>
     </section>
 
