--- a/fe/src/app/features/landing-page/components/landing-page-frame/landing-page-frame.component.html
+++ b/fe/src/app/features/landing-page/components/landing-page-frame/landing-page-frame.component.html
@@ -1,5 +1,5 @@
 <div class="frame-container">
     <figure [ngClass]="aspectRatio" class="frame-container__image-group">
-        <img src="https://firebasestorage.googleapis.com/v0/b/test-firebase-image-81d97.appspot.com/o/Screenshot%202024-02-20%20151404.png?alt=media&token=971da7be-cae5-4f25-95c6-146b484ac3b2" alt="" class="frame-container__image-group__img">
+        <img src="../../../../../assets/images/van-gogh-test.png" alt="" class="frame-container__image-group__img">
     </figure>
 </div>
