--- a/fe/src/app/features/landing-page/components/landing-page-mobile-body/landing-page-mobile-body.component.html
+++ b/fe/src/app/features/landing-page/components/landing-page-mobile-body/landing-page-mobile-body.component.html
@@ -1,7 +1,7 @@
 <div class="wrapper">
     <section class="banner">
         <div class="banner__inside">
-            <img src="https://firebasestorage.googleapis.com/v0/b/test-firebase-image-81d97.appspot.com/o/Screenshot%202024-02-20%20151404.png?alt=media&token=971da7be-cae5-4f25-95c6-146b484ac3b2" alt="banner-mobile-image" class="banner__inside__img">
+            <img src="../../../../../assets/images/van-gogh-test.png" alt="banner-mobile-image" class="banner__inside__img">
             <app-overlay [z_index]="'2'"></app-overlay>
             <div class="banner__inside__left-side">
                 <h1 class="banner__inside__left-side__title">
@@ -46,9 +46,6 @@
                 <app-landing-page-frame [imgUrl]="'huhuhu'" [aspectRatio]="'ar-34'"></app-landing-page-frame>
                 <app-landing-page-frame [imgUrl]="'huhuhu'" [aspectRatio]="'ar-169'"></app-landing-page-frame>
             </div>
-
-            <app-theme-bar (notifyToggleTheme)="handleToggleTheme()"
-            (notifyToggleResume)="handleToggleResume()"></app-theme-bar>
         </div>
     </section>
 
