--- a/fe/src/app/features/landing-page/components/landing-page-tablet-body/landing-page-tablet-body.component.html
+++ b/fe/src/app/features/landing-page/components/landing-page-tablet-body/landing-page-tablet-body.component.html
@@ -2,7 +2,7 @@
     <div class="left-side">
         <section class="left-side__banner">
             <div class="left-side__banner__inside">
-                <img src="https://firebasestorage.googleapis.com/v0/b/test-firebase-image-81d97.appspot.com/o/Screenshot%202024-02-20%20151404.png?alt=media&token=971da7be-cae5-4f25-95c6-146b484ac3b2"
+                <img src="../../../../../assets/images/van-gogh-test.png"
                     alt="banner-image" class="left-side__banner__inside__img">
                 <app-overlay [z_index]="'3'" style="display: contents"></app-overlay>
 
