--- a/fe/src/app/features/landing-page/components/top-info/top-info.component.css
+++ b/fe/src/app/features/landing-page/components/top-info/top-info.component.css
@@ -24,6 +24,11 @@
     font-size: var(--fs-less-1);
 }
 
+.mode-change-group {
+    display: flex;
+    align-items: center;
+    position: relative;
+}
 
 .top-info>* {
     flex: 1;
