--- a/fe/src/app/auth/components/login-modal/login-modal.component.css
+++ b/fe/src/app/auth/components/login-modal/login-modal.component.css
@@ -50,6 +50,7 @@
 .login-modal-container__left-side__logo {
     font-size: 42px;
     margin-bottom: 15px;
+    color: var(--dark-text-color);
     font-family: var(--font-secondary);
     font-weight: 300;
     filter: drop-shadow(-3px 12px 14px #ffffff);
