--- a/fe/src/app/features/landing-page/components/landing-page-service-subject/landing-page-service-subject.component.html
+++ b/fe/src/app/features/landing-page/components/landing-page-service-subject/landing-page-service-subject.component.html
@@ -1,6 +1,6 @@
 <div class="service__body__category">
     <div class="service__body__category__overlay"></div>
-    <img src="https://firebasestorage.googleapis.com/v0/b/test-firebase-image-81d97.appspot.com/o/Screenshot%202024-02-20%20151404.png?alt=media&token=971da7be-cae5-4f25-95c6-146b484ac3b2"
+    <img src="../../../../../assets/images/con_nguoi.png"
         alt="" class="service__body__category__img">
     <div class="service__body__category__text-group">
         <span class="service__body__category__text-group__line"></span>
@@ -12,7 +12,7 @@
 </div>
 <div class="service__body__category">
     <div class="service__body__category__overlay"></div>
-    <img src="https://firebasestorage.googleapis.com/v0/b/test-firebase-image-81d97.appspot.com/o/Screenshot%202024-02-20%20151404.png?alt=media&token=971da7be-cae5-4f25-95c6-146b484ac3b2"
+    <img src="../../../../../assets/images/dong_vat.png"
         alt="" class="service__body__category__img">
     <div class="service__body__category__text-group">
         <span class="service__body__category__text-group__line"></span>
@@ -24,7 +24,7 @@
 </div>
 <div class="service__body__category">
     <div class="service__body__category__overlay"></div>
-    <img src="https://firebasestorage.googleapis.com/v0/b/test-firebase-image-81d97.appspot.com/o/Screenshot%202024-02-20%20151404.png?alt=media&token=971da7be-cae5-4f25-95c6-146b484ac3b2"
+    <img src="../../../../../assets/images/phong_canh.png"
         alt="" class="service__body__category__img">
     <div class="service__body__category__text-group">
         <span class="service__body__category__text-group__line"></span>
