--- a/fe/src/app/features/landing-page/components/landing-page-tablet-body/landing-page-tablet-body.component.css
+++ b/fe/src/app/features/landing-page/components/landing-page-tablet-body/landing-page-tablet-body.component.css
@@ -69,6 +69,7 @@
 .left-side__banner__inside__container__title {
     font-size: 72px;
     font-family: var(--font-secondary);
+    color: var(--dark-text-color);
     white-space: nowrap;
     line-height: 1.2;
     margin-bottom: 12px;
@@ -77,6 +78,7 @@
 
 .left-side__banner__inside__container__desc {
     white-space: nowrap;
+    color: var(--dark-text-color);
     margin-top: -9px;
 }
 
@@ -85,8 +87,8 @@
     padding: 9px 15px;
     margin: 0 auto;
     margin-top: 6px;
+    color: var(--dark-text-color);
     width: 171px;
-    color: var(--current-text-color);
     background: linear-gradient(90deg, #3e008a, #3c0084, #7300ff, #3e008a);
     background-size: 400%;
     border-radius: 30px;
