--- a/fe/src/app/features/list-page/components/list-page-desktop-body/desktop-cart-dropdown/desktop-cart-dropdown.component.css
+++ b/fe/src/app/features/list-page/components/list-page-desktop-body/desktop-cart-dropdown/desktop-cart-dropdown.component.css
@@ -10,6 +10,7 @@
     flex-direction: column;
     overflow-y: auto;
     max-height: 270px;
+    background-color: var(--level2-color);
 }
 
 .list__item {
