--- a/fe/src/app/features/list-page/components/list-page-desktop-body/color-category/color-category.component.css
+++ b/fe/src/app/features/list-page/components/list-page-desktop-body/color-category/color-category.component.css
@@ -40,6 +40,7 @@
     position: absolute;
     inset: 0;
     background-color: #0000001e;
+    color: var(--dark-text-color);
     z-index: 2;
     display: flex;
     justify-content: center;
@@ -111,6 +112,7 @@
     justify-content: center;
     align-items: center;
     background-color: #00000067;
+    color: var(--dark-text-color);
 }
 
 .lower__color-group__overlay.activated > * {
