--- a/fe/src/app/features/list-page/components/list-page-tablet-side-bar/list-page-tablet-side-bar.component.html
+++ b/fe/src/app/features/list-page/components/list-page-tablet-side-bar/list-page-tablet-side-bar.component.html
@@ -1,7 +1,8 @@
 <div class="left-side__inside">
     <div class="left-side__inside__upper">
         <div class="left-side__inside__upper__content">
-            <app-overlay [z_index]="'3'"></app-overlay>
+            <app-overlay *ngIf="getThemeMode()" [z_index]="'3'"></app-overlay>
+            <app-overlay *ngIf="!getThemeMode()" [overlayType]="'--light-overlay-color-light'" [z_index]="'3'"></app-overlay>
             <h1 class="hover-effect-yellow-bright left-side__inside__upper__content__title">
                 <a routerLink="/"
                     class="nothing left-side__inside__upper__content__title__responsive-screen">H</a>
