--- a/fe/src/app/features/landing-page/components/top-info/top-info.component.css
+++ b/fe/src/app/features/landing-page/components/top-info/top-info.component.css
@@ -9,6 +9,11 @@
     height: var(--top-info-height);
 }
 
+.theme-change-group {
+    display: flex;
+    align-items: center;
+}
+
 .top-info__term-and-policies {
     display: flex;
     align-items: center;
