--- a/fe/src/app/features/landing-page/components/top-info/top-info.component.html
+++ b/fe/src/app/features/landing-page/components/top-info/top-info.component.html
@@ -42,4 +42,8 @@
     </ul>
 
     <app-hamburger (notifyToggleHamburger)="handleToggleHamurber()" style="display: contents" *ngIf="(getViewportWidth() <= getBreakpointValues('TABLET')!)"></app-hamburger>
+    
+    <div *ngIf="(getViewportWidth() <= getBreakpointValues('TABLET')!)" class="theme-change-group">
+        <app-theme-bar></app-theme-bar>
+    </div>
 </div>
