--- a/fe/src/app/features/detail-page/layout/layout.component.css
+++ b/fe/src/app/features/detail-page/layout/layout.component.css
@@ -5,25 +5,48 @@
     position: relative;
     z-index: 1;
     padding: 9px;
+    display: flex;
+    align-items: center;
 
     max-height: 1200px !important;
     max-width: 2100px;
     min-height: 720px;
+    --first-gradient-coords: 39% 50%;
+    background-image: radial-gradient(circle closest-corner at var(--first-gradient-coords), var(--current-gradient-glowing-color), transparent)
+}
+
+.left-side {
+    display: flex;
+    flex: 1;
+    position: relative;
+    height: 100%;
+}
+
+.theme-group {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+}
+
+.right-side {
+    width: 21vw;
+    min-width: 360px;
+    height: 100%;
+
 }
 
 .function-group-wrapper {
     height: 100%;
-    width: 390px;
-    position: absolute;
-    top: 0;
-    right: 0;
-    padding: 9px;
+    width: 100%;
     display: flex;
     flex-direction: column;
     gap: 9px;
+
 }
 
 .function-group {
+    background: #33333327;
+    backdrop-filter: blur(51px);
     border: 1px solid var(--current-border-color);
     border-radius: var(--border-radius-2);
     height: 75%;
@@ -33,6 +56,8 @@
 }
 
 .checkout-group {
+    background: #33333327;
+    backdrop-filter: blur(51px);
     border: 1px solid var(--current-border-color);
     border-radius: var(--border-radius-2);
     width: 100%;
@@ -110,6 +135,8 @@
 
 .return-group {
     position: absolute;
+    top: 0;
+    left: 0;
     display: flex;
     align-items: baseline;
     gap: 9px;
@@ -168,31 +195,22 @@
 }
 
 .preview-gallery-group {
-    position: fixed;
-    left: 9px;
-    top: 50%;
-    transform: translateY(-50%);
-    border: 1px solid var(--current-border-color);
-    border-radius: var(--border-radius-2);
-    display: flex;
-    flex-direction: column;
-}
-
-.preview-gallery-group__text {
     position: absolute;
-    top: -24px;
-    left: 0px;
-    font-size: var(--fs-less-1);
-    font-style: italic;
-    opacity: 0.6;
+    bottom: 0px;
+    left: 0;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: 0.45s ease-in-out;
+    animation: slide-bottom-top-fade-detail-page 0.45s ease-in-out;
 }
 
 .preview-gallery-group__list {
-    width: 100%;
-    height: 100%;
+    border: 1px solid var(--current-border-color);
+    border-radius: var(--border-radius-2);
     padding: 6px;
     display: flex;
-    flex-direction: column;
     align-items: center;
     gap: 6px;
 }
@@ -210,7 +228,7 @@
 
 .painting-group {
     height: 100%;
-    width: calc(100% - 390px);
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -225,8 +243,14 @@
 }
 
 .painting__img {
+    animation: displayOpacity 0.9s ease-in-out;
     max-width: 100%;
     max-height: 100%;
     object-fit: contain;
+    padding: 3.9%;
+    border: 12px solid rgb(61, 61, 61);
+    background-color: white;
+    -moz-box-shadow: -11px 11px 27px -4px rgba(0, 0, 0, 0.75), inset -1px 1px 6px 1px rgba(0, 0, 0, .24);
+    -webkit-box-shadow: -11px 11px 27px -4px rgba(0, 0, 0, 0.75), inset -1px 1px 6px 1px rgba(0, 0, 0, .24);
+    box-shadow: -11px 11px 27px -4px rgba(0, 0, 0, 0.75), inset -1px 1px 6px 1px rgba(0, 0, 0, .24);
 }
-
