--- a/fe/src/assets/css/animations.css
+++ b/fe/src/assets/css/animations.css
@@ -8,12 +8,24 @@
 @keyframes slide-bottom-top-fade {
     0% {
         transform: scale(0.96);
+        transform: translateY(12%);
         opacity: 0;
-        transform: translateY(30%);
     } 100% {
         transform: scale(1);
-        opacity: 1;
         transform: translateY(0%);
+        opacity: 1;
+    }
+}
+
+@keyframes slide-bottom-top-fade-detail-page {
+    0% {
+        transform: scale(0.96);
+        transform: translateY(30%);
+        opacity: 0;
+    } 100% {
+        transform: scale(1);
+        transform: translateY(0%);
+        opacity: 1;
     }
 }
 
